[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemdb-common"
version = "0.2.0"
description = "Shared library for chemistry database MCP servers"
requires-python = ">=3.11"
license = "LGPL-3.0-or-later"
authors = [{name = "Reto Stamm", email = "reto@retostamm.com"}]
keywords = ["chemistry", "mof", "catalysis", "database", "mcp"]
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.0",
]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.5",
]

[project.scripts]
chemdb = "chemdb.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/chemdb"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/chemdb/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
