[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemdb-common"
version = "0.2.0"
description = "Shared library for chemistry database MCP servers"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Reto Stamm", email = "reto@retostamm.com" }]
keywords = ["chemistry", "mof", "catalysis", "database", "mcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/retospect/chemdb-common"
Repository = "https://github.com/retospect/chemdb-common"

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.0"]

[project.scripts]
chemdb = "chemdb.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chemdb"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
